k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: berojgardegreewala-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: berojgardegreewala-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
